# chat

./: .clang-tidy  .gitignore  Makefile  get_deps.sh  i3run.sh  meson.build  output.raw  output2.raw
src/: err.cpp  err.hpp  log.cpp  log.hpp  main.cpp  main_sdl.cpp  meson.build  ptr.hpp  types.hpp
src/audio/: audio.hpp  bufsrc.cpp  codec.cpp  codec.hpp  dsp.cpp  example.cpp  lib.cpp  netbuf.cpp  player.cpp  recorder.cpp  rnnoise_dsp.cpp  rtp.hpp  rtp_jitter.cpp  rtp_jitter.hpp  rtp_sender.cpp  sources.hpp  volume_dsp.cpp
src/audio/examples/: demo.cpp  demo_buf.cpp  demo_no_rtp.cpp  demo_serv.cpp  echo.cpp  echo_opus.cpp
src/gui/: gl_include.h  gui.cpp  gui.hpp  io.cpp  io.hpp  renderer.hpp  text.cpp  text.h  units.hpp  vec.hpp  widget.cpp  widget.hpp  win.hpp  window.cpp  window.hpp
src/gui/backends/: gl.cpp  gl.hpp  glfw.cpp  glfw.hpp  graphics.hpp  graphics_gl_impl.cpp  graphics_gl_impl.hpp  renderer_gl_impl.cpp  renderer_gl_impl.hpp  sys.hpp  sys_glfw_impl.cpp  sys_glfw_impl.hpp  win_glfw_impl.cpp  win_glfw_impl.hpp
src/screen_capture/: bmp.h  x11.cpp  x11.h
src/tls/: err.hpp  net.cpp  net.hpp
src/utils/: unicode.cpp  unicode.h
subprojects/: imgui.build  portaudio.build  portaudiocpp.build  rnnoise.build
test/: example.cpp  meson.build
